# LedController

./: .gitignore  CMakeLists.txt  led.cpp  main.cpp  tests.cpp
include/: Animator.h  Color.h  Coordinate.h  Led.h  LedController.h  Pattern.h  led.h
src/: Animator.cpp  Animator.tpp  Color.cpp  Color.tpp  ColorRGB.tpp  ColorRGBA.tpp  Coordinate.cpp  Led.cpp  Led.tpp  LedController.tpp  Pattern.tpp  led.cpp
